[workspace.package]
version = "0.0.14"
edition = "2024"
license = "MIT"
description = "Low latency metrics framework."
documentation = "https://docs.rs/metricus"
repository = "https://github.com/HaveFunTrading/metricus"
keywords = ["metrics", "low-latency"]
categories = ["development-tools::debugging"]
rust-version = "1.85.1"
readme = "README.md"

[workspace]
members = [
    "metricus",
    "metricus_agent",
    "metricus_allocator",
    "metricus_macros"
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.95"
criterion = "0.5.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
jemallocator = "0.5"
mimalloc = "0.1"
quanta = "0.12.5"
duration-str = "0.12.0"
hdrhistogram = "7.5.4"
itoa = "1.0.10"
serde = "1.0.193"
serde_with = "3.6.1"
serde_json = "1.0.137"
serde_yaml = "0.9.33"
thiserror = "2.0.7"
rtrb = "0.3.2"
log = "0.4.25"
dtoa = "1.0.9"
core_affinity = "0.8.1"

[profile.bench]
lto = true
codegen-units = 1
debug = false
