[package]
name = "metricus"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[release]
workspace = true

[features]
default = ["span"]
span = []
rdtsc = ["dep:quanta"]

[dependencies]
quanta = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }

[dev-dependencies]
metricus_macros = { path = "../metricus_macros", version = "0.0.16" }
criterion = { workspace = true }

[[bench]]
name = "static_vs_manual"
path = "benches/static_vs_manual.rs"
harness = false

[[bench]]
name = "dispatch"
path = "benches/dispatch.rs"
harness = false
