[package]
name = "metricus_agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[release]
workspace = true

[features]
default = []
rtrb = ["dep:rtrb"]
rdtsc = ["metricus/rdtsc"]

[dependencies]
metricus = { path = "../metricus", version = "0.0.15" }
metricus_macros = { path = "../metricus_macros", version = "0.0.15" }
anyhow = { workspace = true }
duration-str = { workspace = true }
hdrhistogram = { workspace = true }
itoa = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
rtrb = { workspace = true, optional = true }
log = { workspace = true }
dtoa = { workspace = true }
core_affinity = { workspace = true }

[dev-dependencies]
metricus_allocator = { path = "../metricus_allocator", version = "0.0.15" }
criterion = { workspace = true }
env_logger = "0.11.6"

[[bench]]
name = "agent_latency"
path = "benches/latency.rs"
harness = false
