[package]
name = "metricus_allocator"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[release]
workspace = true

[dependencies]
metricus = { path = "../metricus", version = "0.0.15" }
jemallocator = { workspace = true, optional = true }
mimalloc = { workspace = true, optional = true }

[features]
default = []
jemalloc = ["dep:jemallocator"]
mimalloc = ["dep:mimalloc"]
